# ESP_ClapMetronome

./: .gitignore  ESP_ClapMetronome.ino  PROJECT-README.md  TRACEABILITY-ACTION-PLAN.md  TRACEABILITY-SCRIPT-UPDATE.md  platformio.ini  test.xlsx
.github/: copilot-instructions.md
.github/instructions/: phase-01-stakeholder-requirements.instructions.md  phase-02-requirements.instructions.md  phase-03-architecture.instructions.md  phase-04-design.instructions.md
.github/workflows/: ci-standards-compliance.yml  ci.yml  issue-validation.yml  traceability-check.yml
01-stakeholder-requirements/: StR-001-clap-metronome-system.md  StR-002-advanced-bpm-algorithms.md
02-requirements/functional/: REQ-F-015-histogram-tempo-detection.md  REQ-F-016-pll-tempo-tracking.md  REQ-F-017-subdivision-weighting.md  REQ-F-MQTT-001-telemetry-publishing.md
03-architecture/: ARCHITECTURE-PHASE-03-OUTPUT.md  ARCHITECTURE-SUMMARY.md  GITHUB-ISSUE-BODIES-COMPLETE.md
03-architecture/decisions/: ADR-BPM-003-histogram-tempo-detection.md
04-design/: PHASE-04-COMPLETION-SUMMARY.md  phase-04-traceability-matrix.md  tdd-plan-phase-05.md
05-implementation/: AUDIO-VERIFICATION-COMPLETE.md  DAY-01-AFTERNOON-SUMMARY.md  OUT-05-COMPLETION-SUMMARY.md  PHASE-04-TO-05-TRANSITION-COMPLETE.md  PHASE-05-KICKOFF.md  SESSION-SUMMARY-TRACEABILITY.md  TDD-CYCLE-01-GREEN-SUCCESS.md  TDD-CYCLE-03-GREEN-SUCCESS.md  TDD-CYCLE-06-GREEN-PARTIAL.md  TDD-CYCLE-06-GREEN-SUCCESS.md  TDD-CYCLE-06-RED-KICK-FILTERING.md  TDD-CYCLE-07-GREEN-SUCCESS.md  TDD-CYCLE-08-VALIDATION-SUCCESS.md  TDD-CYCLE-09-COMPLETE.md  TDD-CYCLE-09-GREEN-SUCCESS.md  TDD-CYCLE-09-RED-DETECTION-ACCURACY.md  TDD-CYCLE-09-REFACTOR-SUCCESS.md  TDD-CYCLE-10-VALIDATION-SUCCESS.md  TDD-CYCLE-11-VALIDATION-SUCCESS.md  TDD-CYCLE-12-VALIDATION-SUCCESS.md  TDD-CYCLE-13-VALIDATION-SUCCESS.md  TDD-CYCLE-14-VALIDATION-SUCCESS.md  TDD-CYCLE-AUDIO-01-COMPLETE.md  TDD-CYCLE-AUDIO-01-GREEN-SUCCESS.md  TDD-CYCLE-AUDIO-01-PROGRESS.md  TDD-CYCLE-AUDIO-01-RED-THRESHOLD.md  TDD-CYCLE-BPM-01-GREEN-SUCCESS.md  TDD-CYCLE-BPM-02-GREEN-SUCCESS.md  TDD-CYCLE-BPM-03-GREEN-SUCCESS.md  TDD-CYCLE-BPM-04-GREEN-SUCCESS.md  TDD-CYCLE-BPM-06-GREEN-SUCCESS.md  TDD-CYCLE-BPM-07-GREEN-SUCCESS.md  TDD-CYCLE-CFG-04-COMPLETE.md  TDD-CYCLE-OUT-01-GREEN-SUCCESS.md  TDD-CYCLE-OUT-01-RED-SUCCESS.md  TDD-CYCLE-OUT-02-GREEN-SUCCESS.md  TDD-CYCLE-OUT-02-RED-NETWORK.md  TDD-CYCLE-OUT-03-RED-SUCCESS.md  TDD-CYCLE-OUT-03-RED-TIMER.md  TDD-CYCLE-OUT-04-GREEN-SUCCESS.md  (+21 more)
08-transition/: HARDWARE-INTEGRATION-PLAN.md
data/: app.js  index.html  style.css
docs/: CI-SETUP-GITHUB-PROJECT.md  HARDWARE-WIRING-GUIDE.md  requirements-validation-report-2025-11-18.md  spec-driven-development.md
docs/beat_detection/: 1.md  2.md  3.md  4.md
docs/metronome_project_input/: Beat detection for Tap tempo.md  WebInterface.md  beatdetection.md  beatdetection2.md  beatdetection3.md  beatdetection4.md  beatdetection5.md  beatdetection6.md  beatdetection7.md  beatdetection8.md  midibeatinput_detection.md  rtp.md  rtpmidi_.md  (+2 more)
scripts/: README.md  github-issues-to-traceability-json.py  github-orphan-check.py  github-traceability-report.py
src/: main.cpp
test/: CMakeLists.txt  credentials.example.h
test/mocks/: MockTimingProvider.h  time_mock.h
test/test_audio/: CMakeLists.txt  test_adaptive_threshold.cpp  test_agc_transitions.cpp  test_audio_latency.cpp  test_beat_event_emission.cpp  test_clipping_integration.cpp  test_cpu_usage.cpp  test_detection_accuracy.cpp  test_memory_usage.cpp  test_noise_rejection.cpp  test_state_machine.cpp  test_telemetry_updates.cpp
test/test_audio_accuracy/: CMakeLists.txt  test_detection_accuracy.cpp
test/test_audio_adaptive_threshold/: CMakeLists.txt  test_adaptive_threshold.cpp
test/test_audio_agc_transitions/: CMakeLists.txt  test_agc_transitions.cpp
test/test_audio_beat_events/: CMakeLists.txt  test_beat_event_emission.cpp
test/test_audio_clipping/: CMakeLists.txt  test_clipping_integration.cpp
test/test_audio_cpu_usage/: CMakeLists.txt  test_cpu_usage.cpp
test/test_audio_debounce/: CMakeLists.txt  test_debounce_period.cpp
test/test_audio_kick_filtering/: CMakeLists.txt  test_kick_only_filtering.cpp
test/test_audio_latency/: CMakeLists.txt  test_audio_latency.cpp
test/test_audio_memory/: CMakeLists.txt  test_memory_usage.cpp
test/test_audio_noise/: CMakeLists.txt  test_noise_rejection.cpp
test/test_audio_state_machine/: CMakeLists.txt  test_state_machine.cpp
test/test_audio_telemetry/: CMakeLists.txt  test_telemetry_updates.cpp
test/test_audio_window_sync/: CMakeLists.txt  test_window_synchronization.cpp
test/test_baseline/: README.md  test_baseline.cpp
test/test_bpm/: CMakeLists.txt  test_basic_taps.cpp  test_callback_notifications.cpp  test_circular_buffer.cpp  test_clear_reset.cpp  test_interval_validation.cpp  test_stability.cpp  test_tempo_correction.cpp
test/test_config/: test_change_notifications.cpp  test_default_values.cpp  test_encryption.cpp  test_migration.cpp  test_performance.cpp  test_persistence.cpp  test_range_validation.cpp
test/test_ds3231/: README.md  test_ds3231.cpp
test/test_hardware_combined/: README.md  test_hardware_combined.cpp
test/test_http_client/: README.md  test_simple_http.cpp
test/test_integration/: CMakeLists.txt  test_bpm_output.cpp
test/test_max9814/: README.md  test_max9814.cpp
test/test_mqtt_client/: test_mqtt_basic.cpp
test/test_mqtt_integration/: test_mqtt_integration.cpp
test/test_output/: CMakeLists.txt  test_midi_beat_clock.cpp  test_midi_output.cpp  test_network_transport.cpp  test_performance.cpp  test_relay_output.cpp  test_timer_clock.cpp
test/test_timing/: CMakeLists.txt  run_all_tests.ps1  test_rtc_integration.cpp  test_time_sync.cpp  test_timestamp_query.cpp  test_timing_manager.cpp
test/test_timing_health/: CMakeLists.txt  test_rtc_health.cpp
test/test_timing_query/: CMakeLists.txt
test/test_timing_sync/: CMakeLists.txt
test/test_web/: test_web_integration.cpp  test_web_logic.cpp  test_web_server.cpp
test/test_web_integration/: README.md  test_web_integration.cpp
(+33 files in other folders)
