cmake_minimum_required(VERSION 3.14)
project(DetectionAccuracyTests CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
if(MSVC)
    add_compile_options(/W4 /WX)
else()
    add_compile_options(-Wall -Wextra -Werror -O0 -ggdb)
endif()
add_compile_definitions(NATIVE_BUILD UNIT_TEST)
enable_testing()
include(FetchContent)
FetchContent_Declare(googletest GIT_REPOSITORY https://github.com/google/googletest.git GIT_TAG v1.14.0)
set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
FetchContent_MakeAvailable(googletest)
set(AUDIO_SOURCES ../../src/audio/AudioDetection.cpp)
add_executable(test_detection_accuracy test_detection_accuracy.cpp ${AUDIO_SOURCES})
target_include_directories(test_detection_accuracy PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../.. ${CMAKE_CURRENT_SOURCE_DIR}/../../src ${CMAKE_CURRENT_SOURCE_DIR}/../mocks)
target_link_libraries(test_detection_accuracy PRIVATE GTest::gtest GTest::gtest_main)
include(GoogleTest)
gtest_discover_tests(test_detection_accuracy)
