cmake_minimum_required(VERSION 3.14)
project(MemoryUsageTests CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
if(MSVC)
    add_compile_options(/W4 /WX)
else()
    add_compile_options(-Wall -Wextra -Werror -O0 -ggdb)
endif()
add_compile_definitions(NATIVE_BUILD UNIT_TEST)
enable_testing()
include(FetchContent)
FetchContent_Declare(googletest GIT_REPOSITORY https://github.com/google/googletest.git GIT_TAG v1.14.0)
set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
FetchContent_MakeAvailable(googletest)
set(AUDIO_SOURCES ../../src/audio/AudioDetection.cpp)
add_executable(test_memory_usage test_memory_usage.cpp ${AUDIO_SOURCES})
target_include_directories(test_memory_usage PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../.. ${CMAKE_CURRENT_SOURCE_DIR}/../../src ${CMAKE_CURRENT_SOURCE_DIR}/../mocks)
target_link_libraries(test_memory_usage PRIVATE GTest::gtest GTest::gtest_main)
include(GoogleTest)
gtest_discover_tests(test_memory_usage)
